
  [ Kees Cook ]
  * mk-sbuild-lv:
    - add --skip-updates to allow building security-only chroots.
    - add "apt-utils" as a default package for sane dist-upgrades.

  [ Jonathan Davies ]
  * buildd: Don't show arch override message if operation to perform is
    'status'. 
  * requestsync: If package is new, check the Ubuntu Archive team's bug list
    for possible duplicate requests.

  [ Luca Falavigna ]
  * requestsync:
    - Catch AssertionError exception if rmadison returns with an error.

  [ Markus Korn ]
  * Added manage-credentials, a tool to create (and manage) credentials
    which are used to access launchpad via the API.
  * Ported: hugdaylist, massfile, grab-attachment and requestsync to
    launchpadlib.
  * Other misc. fixes and tweaks.
  * Install common.py to correct location with py_modules.

 -- Luca Falavigna <dktrkranz@ubuntu.com>  Mon, 12 Jan 2009 20:28:01 +0100

ubuntu-dev-tools (0.51) jaunty; urgency=low

  * buildd: Added checks for arch-indep packages and packages which have no
    builds in a release.
  * hugdaylist: String improvements.
  * requestsync:
    - Use optparse instead of getopt for option parsing.
    - Skip existing bug report check if python-launchpad-bugs is not
      installed.
    - Implemented sleeps to --lp bug reporting in case of a slow
      Launchpad to stop mass bug filing (LP: #311289).

 -- Jonathan Davies <jpds@ubuntu.com>  Tue, 30 Dec 2008 15:51:55 +0000 

ubuntu-dev-tools (0.50.1) jaunty; urgency=low

  * Modified setup.py to actually install pull-debian-source.

 -- Jonathan Davies <jpds@ubuntu.com>  Tue, 30 Dec 2008 15:39:35 +0000

ubuntu-dev-tools (0.50) jaunty; urgency=low

  [ Nathan Handler ]
  * Add pull-debian-source script (LP: #289141)
    - debian/copyright:
      + Add myself to the Upstream Authors and Copyright sections
      + Add pull-debian-source to the License section
    - Add doc/pull-debian-source.1

  [ Siegfried-Angel Gevatter Pujals ]