@@ -1,0 +1,74 @@
+.TH MANAGE-CREDENTIALS "1" "13 January 2009" "ubuntu-dev-tools"
+.SH NAME
+manage-credentials \- a tool to create (and manage) credentials which
+are used to access launchpad via the API.
+.SH SYNOPSIS
+.B manage-credentials create -c <consumer> [--email <email> --password <password>] [--service <staging|edge>]
+.br
+.B manage-credentials \-h
+.SH DESCRIPTION
+\fBmanage-credentials\fR is a tool to create (and manage) credentials which
+are used to access Launchpad via the API.
+
+.PP
+Currently this tool can be used
+to create a token with or without using the web UI. In the future, once
+related methods are available through the API, this tool can also be used
+to manage tokens in launchpad and on the users local machine.
+
+.SH OPTIONS
+Listed below are the command line options for requestsync:
+.TP
+.B \-h
+Display a help message and exit.
+.TP
+.B \-c \-\-consumer
+.TP
+.B \-e \-\-email <email>
+Your email address as registered on Launchpad.
+.TP
+.B \-p \-\-password <password>
+Your Launchpad password.
+.TP
+.B \-s \-\-service <edge|staging>
+If we should use the edge or staging root of the Launchpad API.
+.TP
+.B \-\-cache
+Where to store the cache.
+.TP
+.B \-o
+Which file we should save the credentials to.
+.TP
+.B \-l \-\-level <number>
+A number representing the access-level you wish to give to the new
+Launchpad token. 0 is unauthorized, 1 is read public data, 2; write public data,
+3; read private data and 4; write private data.
+
+.SH EXAMPLE USAGE
+There are currently two ways of using \fBmanage-credentials\fR to get
+Launchpad tokens.
+.TP
+1) manage-credentials create -c CONSUMER --level 2
+
+.TP
+This way shall open your webbrowser with a Launchpad login page.
+
+.TP
+2) manage-credentials create -c CONSUMER --level 2 --password BOO --email me@example.com
+
+.TP
+This is a hack, but it works and does not require a webbrowser .
+
+.TP
+If you intend to use manage-credentials for Ubuntu development (such as
+the ubuntu-dev-tools package). Please by sure to run the following:
+
+.TP
+manage-credentials create -c ubuntu-dev-tools -o ~/.lp_credentials.txt
+
+.SH AUTHOR
+.B manage-credentials
+was written by Markus Korn <thekorn@gmx.de> and this manual page was written by
+Jonathan Davies <jpds@ubuntu.com>.
+.PP
+Both are released under the GNU General Public License, version 3.
