@@ -45,7 +45,7 @@ class CmdOptions(OptionParser):
             dest="output", default=None),
         make_option("-l", "--level", action="store", type="int",
             dest="level", default=0,
-            help="integer representing the access-level (default: 0), mappping: %s" %LEVEL),
+            help="integer representing the access-level (default: 0), mapping: %s" %LEVEL),
     )
             
     TOOLS = {
