@@ -9,6 +9,7 @@
 #  Daniel Hahler <ubuntu@thequod.de>
 #  Iain Lane <iain@orangesquash.org.uk>
 #  Jonathan Davies <jpds@ubuntu.com>
+#  Markus Korn <thekorn@gmx.de> (python-launchpadlib support)
 #
 # ##################################################################
 #
